  Report 32609.

* When a BuildListener tried to access System.err or System.out, Ant
  would have thrown an exception - this has been changed.  Ant now
  silently ignores the message.  BuildListeners still should avoid
  accessing either stream.

* Overloaded FileUtils.createNewFile with a boolean mkdirs attribute
  to create nonexistent parent directories.

Fixed bugs:
-----------

* AbstractCvsTask prematurely closed its outputStream and errorStream.
  Bugzilla 30097.

* Target Location was always UNKNOWN_LOCATION due to an omitted merge.

* Impossible to use implicit classpath for <taskdef>
  when Ant core loader != Java application loader and Path.systemClassPath taken from ${java.class.path}
  Bugzilla 30161.  

* Enable to choose the regexp implementation without system property.
  Bugzilla Report 15390.

* MacroInstance did not clean up nested elements correctly in the execute method, causing
  multiple use of the same macro instance with nested elements to fail.

* checksum fileext property doc wrong. Bugzilla 30787.

* FTP task, getTimeDiff method was returning wrong value. Bugzilla 30595.

* Zip task was not zipping when only empty directories were found. Bugzilla 30365.

* Jar task was not including manifest files when duplicate="preserve" was chosen. Bugzilla 32802.

* Classpath was treated in the same way as -lib options. Bugzilla 28046.

* Manual page for cvsversion contained incorrect attributes and did not say since 1.6.1.
  Bugzilla 31408.

* Typo in definition of <cvsversion> task causing it not to be defined.
  Bugzilla 31403.

* Execution of top level tasks in imported files get delayed by targets.
  Bugzilla report 31487.

* ExecTask executes checkConfiguration() even though os does not match.
  Bugzilla report 31805.

* Concat task instance could not be run twice.
  Bugzilla report 31814.

* NPE using XmlLogger and antlib.
  Bugzilla report 31840.

* Properties.propertyNames() should be used instead of .keys().
  Bugzilla report 27261.
